[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ShopScreen.gd" id="1"]
[ext_resource type="Texture2D" path="res://Art/backgrounds/growth_combat.png" id="2"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.6, 0.5, 0.4, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Merchant's Hollow"
horizontal_alignment = 1

[node name="DeckInfo" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Shards: 0 | Deck: 10 | HP: 50/50"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Items" type="VBoxContainer" parent="Panel/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24

[node name="CardsGrid" type="HFlowContainer" parent="Panel/VBox/Scroll/Items"]
layout_mode = 2
alignment = 1

[node name="Actions" type="HBoxContainer" parent="Panel/VBox/Scroll/Items"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 32

[node name="RemoveButton" type="Button" parent="Panel/VBox/Scroll/Items/Actions"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Purge Card (50)"

[node name="HealButton" type="Button" parent="Panel/VBox/Scroll/Items/Actions"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Rest (+20 HP) (40)"

[node name="LeaveButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Leave Shop"
